--- a/profile/index.html
+++ b/profile/index.html
@@ -83,13 +83,10 @@
                     <div class="card-horizontal">
                       <div class="front">
                         <div class="dew colors">
-                          <img src="./img/icon0.png" alt="" />
+                          <img src="./img/kookmin.png" alt="kookmin" />
                         </div>
                         <div class="desc">
-                          <h3>
-                            국민대학교 신소재공학과 <br />
-                            졸업
-                          </h3>
+                          <h3>국민대학교 신소재공학과 졸업</h3>
                         </div>
                       </div>
                       <div class="back hori">
@@ -104,13 +101,10 @@
                     <div class="card-vertical">
                       <div class="front">
                         <div class="dew colors">
-                          <img src="./img/icon0.png" alt="" />
+                          <img src="./img/study.png" alt="study" />
                         </div>
                         <div class="desc">
-                          <h3>
-                            정보처리기사 <br />
-                            필기(합격)
-                          </h3>
+                          <h3>정보처리기사 필기(합격)</h3>
                         </div>
                       </div>
                       <div class="back ver">
@@ -126,13 +120,10 @@
                     <div class="card-horizontal">
                       <div class="front">
                         <div class="dew colors">
-                          <img src="./img/icon0.png" alt="" />
+                          <img src="./img/plan.png" alt="plan" />
                         </div>
                         <div class="desc">
-                          <h3>
-                            LG 나는 배우다 <br />
-                            프로젝트 참여
-                          </h3>
+                          <h3>LG 나는 배우다 프로젝트 참여</h3>
                         </div>
                       </div>
                       <div class="back hori">
@@ -147,13 +138,10 @@
                     <div class="card-vertical">
                       <div class="front">
                         <div class="dew colors">
-                          <img src="./img/icon0.png" alt="" />
+                          <img src="./img/self.png" alt="self" />
                         </div>
                         <div class="desc">
-                          <h3>
-                            지하철 단편 영화 <br />
-                            제작
-                          </h3>
+                          <h3>지하철 단편 영화 제작</h3>
                         </div>
                       </div>
                       <div class="back ver">
@@ -170,7 +158,7 @@
 
             <div class="profile">
               <img
-                class="mian-profile"
+                class="main-profile"
                 src="./img/yiseul01.jpg"
                 alt="profile"
               />
@@ -393,7 +381,7 @@
                       class="viewMore colors"
                       href="https://etude-boo-0329.web.app/productAll/proudct.html"
                       target="_blank"
-                      >View More</a
+                      >View <span>More</span></a
                     >
                   </div>
                 </div>
