--- a/profile/index.html
+++ b/profile/index.html
@@ -156,7 +156,7 @@
               </div>
             </div>
 
-            <div class="profile">
+            <div class="profile colors">
               <img
                 class="main-profile"
                 src="./img/yiseul01.jpg"
@@ -630,16 +630,20 @@
                   <li class="colors">React<span>React</span></li>
                 </ul>
                 <div class="ex-box">
+                  <div class="slide-button">
+                    <span><i class="fa-solid fa-caret-left"></i></span>
+                    <span><i class="fa-solid fas fa-caret-right"></i></span>
+                  </div>
                   <div class="modal-full">
                     <span id="my-modal">
                       <iframe
                         src="https://flex-hompage-petit.web.app"
                         id="chat-iframe"
                       ></iframe>
-                      <span class="modal-close-btn"
-                        ><i class="colorstext fa-solid fa-x"></i
-                      ></span>
                     </span>
+                    <span class="modal-close-btn"
+                      ><i class="fa-solid fa-x"></i
+                    ></span>
                   </div>
                   <ul class="ex-box-wrap active">
                     <li>
