--- a/profile/index.html
+++ b/profile/index.html
@@ -44,11 +44,11 @@
 
         <nav>
           <ul class="gnb">
-            <li>Home</li>
-            <li>Skill</li>
-            <li>Project</li>
-            <li>Example</li>
-            <li>Contact</li>
+            <li class="colorstext">Home</li>
+            <li class="colorstext">Skill</li>
+            <li class="colorstext">Project</li>
+            <li class="colorstext">Example</li>
+            <li class="colorstext">Contact</li>
           </ul>
           <span class="toggle-btn">
             <span></span>
@@ -631,11 +631,11 @@
                 </ul>
                 <div class="ex-box">
                   <div class="slide-button">
-                    <span><i class="fa-solid fa-caret-left"></i></span>
-                    <span><i class="fa-solid fas fa-caret-right"></i></span>
+                    <button><i class="fa-solid fa-caret-left"></i></button>
+                    <button><i class="fa-solid fas fa-caret-right"></i></button>
                   </div>
                   <div class="modal-full">
-                    <span id="my-modal">
+                    <span id="ex-modal">
                       <iframe
                         src="https://flex-hompage-petit.web.app"
                         id="chat-iframe"
@@ -669,8 +669,8 @@
                     <li>
                       <div class="colors">
                         <p>
-                          HTML5와 CSS의 마우스 오버 이벤트만을 <br />이용하여
-                          기술을 구현해 보았습니다.
+                          HTML5와 CSS의 마우스 오버 이벤트만을 이용하여 기술을
+                          구현해 보았습니다.
                         </p>
                       </div>
                       <img src="./img/css01.png" alt="flex" />
@@ -710,8 +710,8 @@
                       <div class="colors">
                         <p>
                           정규 표현식을 이용한 로그인 폼을 순수 자바스크립트로
-                          구현해 보았고 조건문을 사용해 <br />
-                          회원가입 결정 여부를 설정하였습니다.
+                          구현해 보았고 조건문을 사용해 회원가입 결정 여부를
+                          설정하였습니다.
                         </p>
                       </div>
                       <img src="./img/loginform.png" alt="flex" />
@@ -744,9 +744,9 @@
                       <div class="colors">
                         <p>
                           라우팅 기능을 이용해 필요한 데이터 값만 불러와
-                          페이지를 렌더링 시켜 빠른 페이지 전환을
-                          <br />구현하였고 map함수와 filter함수를 통해
-                          장바구니에 담긴 상품들을 관리할 수 있었습니다.
+                          페이지를 렌더링 시켜 빠른 페이지 전환을 구현하였고
+                          map함수와 filter함수를 통해 장바구니에 담긴 상품들을
+                          관리할 수 있었습니다.
                         </p>
                       </div>
                       <img src="./img/shopier.png" alt="flex" />
@@ -767,8 +767,12 @@
             <div class="section-inner">
               <p>모든 것은 마음 먹기에 달려있는 법</p>
               <span class="social colors">
-                <a href=""><img src="./img/Vector.png" alt="github" /></a>
-                <span><img src="./img/Group 13.png" alt="gmail" /></span>
+                <a href="https://github.com/Petitlune" target="_blank"
+                  ><img src="./img/Vector.png" alt="github"
+                /></a>
+                <span class="email"
+                  ><img src="./img/Group 13.png" alt="gmail"
+                /></span>
               </span>
             </div>
             <div class="bottom colors">
